add select & rotate functionality

--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,10 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
+
+
+UnityXRContent
+/.utmp/*
+furniture-tutorial_BurstDebugInformation_DoNotShip
+XR/UserSimulationSettings
+UnityXRContent.meta
